package com.example.demo.factorymethod;

import java.io.IOException;

public interface Bills {
    void sendBill() ;
}
