@startuml

title __FACTORYMETHOD's Class Diagram__\n


    namespace om.example.demo {
      namespace factorymethod {
        class com.example.demo.factorymethod.BillFactory {
            + createBills()
        }
      }
    }

  


    namespace om.example.demo {
      namespace factorymethod {
        interface com.example.demo.factorymethod.Bills {
            {abstract} + sendBill()
        }
      }
    }

  


    namespace om.example.demo {
      namespace factorymethod {
        class com.example.demo.factorymethod.CSVBill {
            + sendBill()
            - createCsvData()
        }
      }
    }

  


    namespace om.example.demo {
      namespace factorymethod {
        class com.example.demo.factorymethod.JSONBill {
            + sendBill()
        }
      }
    }

  

  com.example.demo.factorymethod.BillFactory o-- com.example.demo.factorymethod.CSVBill : csvBill
  com.example.demo.factorymethod.BillFactory o-- com.example.demo.factorymethod.JSONBill : jsonBill
  com.example.demo.factorymethod.CSVBill .up.|> com.example.demo.factorymethod.Bills
  com.example.demo.factorymethod.CSVBill o-- com.example.demo.service.ConcertService : concertService
  com.example.demo.factorymethod.CSVBill o-- com.example.demo.service.TicketService : ticketService
  com.example.demo.factorymethod.JSONBill .up.|> com.example.demo.factorymethod.Bills
  com.example.demo.factorymethod.JSONBill o-- com.example.demo.service.TicketService : ticketService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
